--- a/public/index.html
+++ b/public/index.html
@@ -6,18 +6,18 @@
     <title>Document</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body class="text-gray-600">
     
 <div><!--content wrapper-->
     <div>
         <nav>
             <div>
-                <h1>
+                <h1 class="font-bold uppercase p-4 border-b border-gray-100">
                     <a href="/">Food Ninja</a>
                 </h1>
             </div>
             <ul>
-                <li>
+                <li class="text-gray-700 font-bold">
                     <a href="#">
                         <span>Home</span>
                     </a>
@@ -34,7 +34,7 @@
             </ul>
         </nav>
     </div><!--end nav-->
-    <main>
+    <main class="px-16 py-16">
 
         <div>
             <a href="#">Log in</a>
@@ -42,14 +42,14 @@
         </div>
 
         <header>
-            <h2>Recipes</h2>
-            <h3>For Ninjas</h3>
+            <h2 class="text-gray-700 text-6xl font-semibold">Recipes</h2>
+            <h3 class="text-2xl font-semibold">For Ninjas</h3>
         </header>
 
         <div>
-            <h4>Latest Recipes</h4>
+            <h4 class="font-bold mt-12 pb-2 border-b border-gray-200">Latest Recipes</h4>
 
-            <div>
+            <div class="mt-8">
                 <!--Cards go here-->
                 <div>
                     <img src="img/curry.jpg" alt="">
@@ -61,7 +61,7 @@
 
             </div>
 
-            <h4>Most Popular</h4>
+            <h4 class="font-bold mt-12 pb-2 border-b border-gray-200">Most Popular</h4>
 
             <div>
                 <!--Cards go here-->
