--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
         <nav>
             <div>
                 <h1 class="font-bold uppercase p-4 border-b border-gray-100">
-                    <a href="/">Food Ninja</a>
+                    <a class="" href="/">Food Ninja</a>
                 </h1>
             </div>
             <ul>
@@ -36,7 +36,7 @@
     </div><!--end nav-->
     <main class="px-16 py-16">
 
-        <div class="flex justify-end">
+        <div class="flex justify-center md:justify-end">
             <a href="#" class="text-primary">Log in</a>
             <a href="#" class="text-primary ml-2">Sign Up</a>
         </div>
