--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
             </ul>
         </nav>
     </div><!--end nav-->
-    <main class="px-16 py-16">
+    <main class="px-16 py-16 bg-gray-100">
 
         <div class="flex justify-center md:justify-end">
             <a href="#" class="text-primary">Log in</a>
@@ -57,11 +57,11 @@
 
             <div class="mt-8">
                 <!--Cards go here-->
-                <div>
-                    <img src="img/curry.jpg" alt="">
-                    <div>
-                        <span>5 Bean Chilli Stew</span>
-                        <span>Recipe by Mario</span>
+                <div class="bg-white rounded overflow-hidden shadow-md">
+                    <img src="img/curry.jpg" alt="" class="w-full h-32 sm:h-48 object-cover">
+                    <div class="m-4">
+                        <span class="font-bold">5 Bean Chilli Stew</span>
+                        <span class="block text-gray-500 text-sm">Recipe by Mario</span>
                     </div>
                 </div>
 
