--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,8 @@
 </head>
 <body class="text-gray-600 font-body">
     
-<div><!--content wrapper-->
-    <div>
+<div class="grid md:grid-cols-3"><!--content wrapper-->
+    <div class="md:col-span-1">
         <nav>
             <div>
                 <h1 class="font-bold uppercase p-4 border-b border-gray-100">
@@ -34,7 +34,7 @@
             </ul>
         </nav>
     </div><!--end nav-->
-    <main class="px-16 py-16 bg-gray-100">
+    <main class="px-16 py-16 bg-gray-100 md:col-span-2">
 
         <div class="flex justify-center md:justify-end">
             <a href="#" class="text-primary">Log in</a>
@@ -55,7 +55,7 @@
         <div>
             <h4 class="font-bold mt-12 pb-2 border-b border-gray-200">Latest Recipes</h4>
 
-            <div class="mt-8">
+            <div class="mt-8 grid lg:grid-cols-3 gap-10">
                 <!--Cards go here-->
                 <div class="card">
                     <img src="img/curry.jpg" alt="Bean Chilli" class="w-full h-32 sm:h-48 object-cover">
