--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
         <nav>
             <div>
                 <h1 class="font-bold uppercase p-4 border-b border-gray-100">
-                    <a class="" href="/">Food Ninja</a>
+                    <a class="hover:text-gray-700" href="/">Food Ninja</a>
                 </h1>
             </div>
             <ul>
@@ -40,8 +40,8 @@
     <main class="px-16 py-16 bg-gray-100 md:col-span-2">
 
         <div class="flex justify-center md:justify-end">
-            <a href="#" class="btn text-primary border-primary md:border-2">Log in</a>
-            <a href="#" class="btn text-primary ml-2 border-primary md:border-2">Sign Up</a>
+            <a href="#" class="btn text-primary border-primary md:border-2 hover:bg-primary hover:text-white">Log in</a>
+            <a href="#" class="btn text-primary ml-2 border-primary md:border-2 hover:bg-primary hover:text-white">Sign Up</a>
         </div>
 
         <div class="flex items-center justify-center">
@@ -60,7 +60,7 @@
 
             <div class="mt-8 grid lg:grid-cols-3 gap-10">
                 <!--Cards go here-->
-                <div class="card">
+                <div class="card hover:shadow-lg">
                     <img src="img/curry.jpg" alt="Bean Chilli" class="w-full h-32 sm:h-48 object-cover">
                     <div class="m-4">
                         <span class="font-bold">5 Bean Chilli Stew</span>
@@ -71,7 +71,7 @@
                         <span >25 mins</span>
                     </div>
                 </div>
-                <div class="card">
+                <div class="card hover:shadow-lg">
                     <img src="img/curry.jpg" alt="Veg Noodles" class="w-full h-32 sm:h-48 object-cover">
                     <div class="m-4">
                         <span class="font-bold">Veg Noodles</span>
@@ -81,7 +81,7 @@
                         <svg class="w-5 inline-block" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"></path></svg>
                         <span >25 mins</span>
                     </div>
-                </div><div class="card">
+                </div><div class="card hover:shadow-lg">
                     <img src="img/curry.jpg" alt="" class="w-full h-32 sm:h-48 object-cover">
                     <div class="m-4">
                         <span class="font-bold">5 Bean Chilli Stew</span>
@@ -104,7 +104,7 @@
             </div>
 
             <div class="flex justify-center">
-                <div class="btn bg-secondary-100 text-secondary-200">Load more</div>
+                <div class="btn bg-secondary-100 text-secondary-200 hover:shadow-inner">Load more</div>
             </div>
         </div>
     </main>
